# musictheory-vibecoded

./: CHANGELOG.md  DEPLOYMENT.md  LICENSE  PR_READY.md  README.md  next.config.mjs  package.json  vercel.json
.github/: pull_request_template.md
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx
app/analyze/: page.tsx
app/stems/: page.tsx
python-backend/: main.py  pyproject.toml
scripts/: setup-python.sh
